--- a/level-1/index.html
+++ b/level-1/index.html
@@ -46,7 +46,12 @@
 
           <header class="content-mid-header"></header>
 
-          <div class="content"></div>
+          <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero error ipsa aspernatur quos
+            natus non doloremque officia delectus beatae. Officia totam corporis veniam facere. Incidunt, itaque.
+            Repellat distinctio ea porro? ipsum dolor sit amet consectetur adipisicing elit. Vero error ipsa aspernatur
+            quos natus non doloremque officia delectus beatae. Officia totam corporis veniam facere. Incidunt, itaque.
+            Repellat distinctio ea porro?
+          </div>
 
         </section>
 
